# BananaNet

./: .gitignore  .gitmodules  CMakeLists.txt  Core.h  LICENSE  README.md
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters
Client/include/: client.h
Client/src/: client.cpp  main.cpp
Core/: CMakeLists.txt  Core.h  Log.cpp  Log.h
Gui/: Application.cpp  Application.h  Application.ui  Chat.cpp  Chat.h  Chat.ui  Instance.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Resource.qrc  SignInWidget.cpp  SignInWidget.h  SignInWidget.ui  SignUpWidget.cpp  SignUpWidget.h  SignUpWidget.ui  main.cpp
Server/: CMakeLists.txt
Server/include/: client_info.h  database.h  logger.h  server.h  thread_pool.h
Server/src/: database.cpp  logger.cpp  main.cpp  server.cpp
TCP Client/include/: client.h
TCP Client/src/: client.cpp  main.cpp
TCP Server/include/: server.h  thread_pool.h
TCP Server/src/: main.cpp  server.cpp  thread_pool.cpp
UDP Client/include/: client.h
UDP Client/src/: client.cpp  main.cpp
UDP Server/include/: server.h
UDP Server/src/: main.cpp  server.cpp
sql/: drop.sql  init.sql
